small fixes on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -29,4 +29,5 @@
   --color-red: #d63958;
   --color-orange: #fe8835;
   --breakpoint-3xl: 120rem;
+  --breakpoint-xs: 27rem;
 }
